--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<h1>Hello World</h1>
-<h2>Hello World</h2>
-<p>Họ và tên: Nguyễn Hà Tiến Lộc</br></p>
-<p>MSSv: 23070419</p>
-<div class="hero">
-        <label for="input-file" id="drop-area">
-            <input type="file" accept="image/*" id="input-file">
-            <div class="img-view">
-                <img src="icon.png">
-                <p>Kéo và thả hoặc nhấn vào đây<br>để tải ảnh lên</p>
-                <span>Tải ảnh bất kỳ từ máy</span>
-            </div>
-        </label>
-    </div>
+hshiahdoiw
