--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hshiahdoiw
+<div class="hero">
+        <label for="input-file" id="drop-area">
+            <input type="file" accept="image/*" id="input-file">
+            <div class="img-view">
+                <img src="icon.png">
+                <p>Kéo và thả hoặc nhấn vào đây<br>để tải ảnh lên</p>
+                <span>Tải ảnh bất kỳ từ máy</span>
+            </div>
+        </label>
+    </div>
