--- a/week4/week4.html
+++ b/week4/week4.html
@@ -16,7 +16,7 @@
         }
     </style>
 </head>
-<body background="/hinh-nen-8k-004.jpg" text="white">
+<body background="/hinh-nen-8k-004.jpg" text="">
     <h1>Table Of Content</h1>
     <h2>1.
         <a href="#internet">Internet</a><br>
