--- a/week4/week4.html
+++ b/week4/week4.html
@@ -6,17 +6,17 @@
     <title>Document</title>
     <style>
         .a{
-            color: white;
+            color: blue;
         }
         a:visited {
             color: blueviolet;
         }
         a:hover {
-            color: white;
+            color: red;
         }
     </style>
 </head>
-<body background="/hinh-nen-8k-004.jpg" text="">
+<body>
     <h1>Table Of Content</h1>
     <h2>1.
         <a href="#internet">Internet</a><br>
